# BabyFTP

./: .gitignore  CMakeLists.txt  README.md
client/: client.cpp
server/: server.cpp
shared/: checksum.cpp  checksum.h  checksum_linux.cpp  checksum_mac.cpp
